session-3-services-config/manifests/02-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodeport
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
